--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0' // add plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
     }
 }
 
@@ -18,6 +19,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://maven.google.com" }//需要添加的仓库地址
+        maven { url 'https://jitpack.io' }
         
     }
 }
