--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/NoTitleBarActivityStyle">
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,6 +41,7 @@
 
         <activity android:name=".LoginActivity"/>
         <activity android:name=".utils.SelectExcelActivity"/>
+        <activity android:name=".SeekPictureActivity"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
