--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,17 @@
 apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao' // apply plugin
+apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.alan.hairun.takephoapp"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "1.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -24,7 +26,7 @@ android {
     buildToolsVersion = '28.0.3'
 
     greendao {
-        schemaVersion 1
+        schemaVersion 2
         daoPackage 'com.alan.hairun.gen'
         targetGenDir 'src/main/java'
     }
@@ -54,4 +56,12 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation files('libs/BaiduLBS_Android.jar')
     implementation files('libs/poi-3.9.jar')
+    implementation 'com.jakewharton:butterknife:10.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+    implementation 'com.android.support:multidex:1.0.3'
+
+
 }
