--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0' // add plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.1'
 
     }
 }
@@ -21,7 +22,7 @@ allprojects {
         jcenter()
         maven { url "https://maven.google.com" }//需要添加的仓库地址
         maven { url 'https://jitpack.io' }
-        
+
     }
 }
 
