--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,11 @@ android {
         applicationId "com.alan.hairun.takephoapp"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 4
-        versionName "1.3"
+        versionCode 8
+        versionName "1.8"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        ndk { abiFilters "armeabi", "armeabi64-v8a", "armeabi-v7a", "x86", "mips" }
     }
     buildTypes {
         release {
@@ -37,6 +38,7 @@ android {
             jni.srcDirs = []    //disable automatic ndk-build
         }
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 
@@ -54,14 +56,12 @@ dependencies {
     // add library
     implementation 'com.yanzhenjie:permission:2.0.0-rc3'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation files('libs/BaiduLBS_Android.jar')
-    implementation files('libs/poi-3.9.jar')
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation 'com.android.support:multidex:1.0.3'
-
-
+    implementation files('libs/tiandituapi3.0.jar')
+    implementation files('libs/poi-3.9.jar')
 }
